2012-05-31  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp: Porting code to desktop.  Because of
	outdated github the code may be slightly unstable.  Needs to be
	retested on sbcl and laptop.
	(start-gnuplot): While porting to new desktop (where it now
	works), I might have mungled the interface.  This functions needs
	to be retested on SBCL and on my laptop.
	(init-gnuplot): Fixed bug - I was using symbolicate, which I don't
	think was necessary.  Now I downcase the terminal name, since that
	seems to be the convention on gnuplot.
	(*executable*): Modified sbcl search path to test both
	/usr/local/bin and /usr/bin
	(*terminal*): Added case for unix feature setting to X11.
	(start-gnuplot): I restored the sbcl specific code since
	exteranl-program:run did not work
	(*executable*): Changed sbcl feature filter to unix feature
	filter.  That should make it more robust

2012-02-28  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface-package-def.lisp (#:gnuplot-interface):
	Exporting the *terminal* symbol

2012-02-27  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (stop): Added as alias to stop-gnuplot

	* gnuplot-interface-package-def.lisp (#:gnuplot-interface): Added
	:start and :stop as exported symbols

2012-02-26  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (start-gnuplot): Set return value to
	(values)
	(start-gnuplot): Implemented call to gnuplot via
	external-program:run.  Tested on clisp only

2012-02-25  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (*executable*): Added wgnuplot path
	(*terminal*): Changed feature tests to be based on platforms, not
	my individual machines
	(eval-when (...)): cleaned-up DISPLAY initialization 
	(command): cleaned-up accumulated crud
	(gnuplot-command): args is now a &rest, and we use apply instead
	of funcall

2011-10-05  Mirko Vukovic  <Mirko Vukovic <mirko.vukovic@us.tel.com>>
